# Siglent-Oscilloscope

./: .codecov.yml  .docstring-validation.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  BRANDING.md  BUILD.md  BUILD_EXECUTABLE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ICON_SETUP.md  MANIFEST.in  Makefile  README.md  REPORT_GENERATOR_FEATURE.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  report-generator-linux.spec  report-generator-windows.spec  requirements.txt  siglent-gui.spec  sitemap.xml  test_ollama_integration.py  test_pdf_generation.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: build-executables.yml  ci.yml  docs.yml  publish.yml
CONTRIBUTING/: index.html
EXECUTABLE_ICONS/: index.html
SECURITY/: index.html
VISUAL_MEASUREMENTS/: index.html
about/changelog/: index.html
about/license/: index.html
about/security/: index.html
api/analysis/: index.html
api/automation/: index.html
api/channel/: index.html
api/connection_socket/: index.html
api/exceptions/: index.html
api/gui/: index.html
api/math_channel/: index.html
api/measurement/: index.html
api/models/: index.html
api/oscilloscope/: index.html
api/reference_waveform/: index.html
api/screen_capture/: index.html
api/trigger/: index.html
api/vector_graphics/: index.html
api/waveform/: index.html
development/BUILDING_EXECUTABLES/: index.html
development/CODE_SIGNING/: index.html
development/EXPERIMENTAL_FEATURES/: index.html
development/ICON_SETUP/: index.html
development/PRE_COMMIT_CHECKS/: index.html
development/PROJECT_STRUCTURE/: index.html
development/PYPI_DEPLOYMENT/: index.html
development/PYPI_READY/: index.html
development/TESTING_BUILD_WORKFLOW/: index.html
development/VERSION_BUMPING/: index.html
development/building/: index.html
development/contributing/: index.html
development/structure/: index.html
development/testing/: index.html
docs/: CONTRIBUTING.md  EXECUTABLE_ICONS.md  SECURITY.md  VISUAL_MEASUREMENTS.md  index.md
docs/about/: changelog.md  license.md  security.md
docs/api/: analysis.md  automation.md  channel.md  connection_socket.md  exceptions.md  gui.md  math_channel.md  measurement.md  models.md  oscilloscope.md  reference_waveform.md  screen_capture.md  trigger.md  vector_graphics.md  waveform.md
docs/development/: BUILD.md  BUILDING_EXECUTABLES.md  CODE_SIGNING.md  EXPERIMENTAL_FEATURES.md  PRE_COMMIT_CHECKS.md  PROJECT_STRUCTURE.md  PYPI_DEPLOYMENT.md  PYPI_READY.md  TESTING_BUILD_WORKFLOW.md  VERSION_BUMPING.md  building.md  contributing.md  documentation-deployment.md  structure.md  testing.md
docs/examples/: advanced.md  beginner.md  intermediate.md
docs/getting-started/: connection.md  installation.md  quickstart.md
docs/gui/: fft-analysis.md  interface.md  live-view.md  overview.md  protocol-decoding.md  vector-graphics.md  visual-measurements.md
docs/images/: .gitkeep
docs/report-generator/: api-reference.md  getting-started.md  index.md  llm-setup.md  templates-guide.md  templates.md
docs/user-guide/: advanced-features.md  basic-usage.md  measurements.md  trigger-control.md  waveform-capture.md
example_reports/: example_report.md
examples/: README.md  advanced_analysis.py  basic_usage.py  batch_capture.py  continuous_capture.py  data_logger_basic.py  function_generator_basic.py  interactive_tutorial.ipynb  live_plot.py  measurements.py  probe_calibration_analysis.py  psu_advanced_features.py  psu_basic_control.py  psu_gui_test.py  psu_usb_connection.py  report_generation_example.py  simple_capture.py  trigger_based_capture.py  vector_graphics_xy_mode.py  waveform_capture.py
examples/advanced/: index.html
examples/beginner/: index.html
getting-started/connection/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
gui/fft-analysis/: index.html
gui/interface/: index.html
gui/live-view/: index.html
gui/overview/: index.html
gui/protocol-decoding/: index.html
gui/vector-graphics/: index.html
gui/visual-measurements/: index.html
report-generator/: index.html
resources/: .gitignore  README.md  Test Equipment.icns  siglent-icon.icns
scpi_control/: __init__.py  automation.py  awg_models.py  awg_output.py  awg_scpi_commands.py  channel.py  daq_models.py  daq_scpi_commands.py  data_logger.py  function_generator.py  measurement.py  oscilloscope.py  power_supply.py  power_supply_output.py  psu_data_logger.py  trigger.py  vector_graphics.py  waveform.py
scripts/: README.md  build_executable.py  bump_version.py  manual_test_dependency_check.py  manual_test_live_view.py  manual_test_pyqtgraph.py  manual_test_waveform_display.py  pre_pr_check.py  pre_pr_check.sh  run_debug.bat  run_debug.py  test_build_system.py  test_llm_model_detection.py  test_pdf_progress.py  test_signal_detection.py  test_unicode_rendering.py
search/: search_index.json
siglent/: __init__.py  analysis.py  automation.py  awg_models.py  awg_output.py  awg_scpi_commands.py  channel.py  exceptions.py  function_generator.py  math_channel.py  measurement.py  measurement_config.py  models.py  oscilloscope.py  protocol_decode.py  reference_waveform.py  scpi_commands.py  screen_capture.py  trigger.py  vector_graphics.py  waveform.py
tests/: README.md  test_automation.py  test_capture_debug.py  test_channel.py  test_connection_error_messages.py  test_core_imports_without_gui.py  test_data_logger.py  test_dependency_check.py  test_function_generator.py  test_gui_initialization.py  test_imports.py  test_live_view.py  test_math_operations.py  test_measurement_comprehensive.py  test_parsing.py  test_power_supply.py  test_protocol_decoders.py  test_pyqtgraph.py  test_socket_connection.py  test_trigger_api.py  test_trigger_comprehensive.py  test_visa_connection.py  test_waveform_comprehensive.py  test_waveform_display.py  test_waveform_parsing.py
(+133 files in other folders)
