[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Siglent-Oscilloscope"
version = "0.2.1"
description = "Python package for controlling Siglent oscilloscopes (SDS800XHD, SDS1000X, SDS2000X Plus, SDS5000X series) via Ethernet"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
keywords = ["siglent", "oscilloscope", "SDS", "SCPI", "test equipment", "instrumentation", "measurement"]
authors = [
    {name = "Siglent Control Contributors"}
]
maintainers = [
    {name = "Siglent Control Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: X11 Applications :: Qt",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/little-did-I-know/Siglent-Oscilloscope"
Documentation = "https://github.com/little-did-I-know/Siglent-Oscilloscope#readme"
Repository = "https://github.com/little-did-I-know/Siglent-Oscilloscope"
Issues = "https://github.com/little-did-I-know/Siglent-Oscilloscope/issues"
Changelog = "https://github.com/little-did-I-know/Siglent-Oscilloscope/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
hdf5 = [
    "h5py>=3.8.0",
]
gui = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyqtgraph>=0.13.0",
]
all = [
    "h5py>=3.8.0",
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "pyqtgraph>=0.13.0",
]

[project.scripts]
siglent-gui = "siglent.gui.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
siglent = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["siglent*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', "py312"]
